# yent

./: .gitignore  AGENTS.md  CLAUDE.md  JANUS_CONSTITUTION.md  LICENSE-WEIGHTS  Makefile  README.md  YENTLOG.md  YENT_CONSTITUTION.md  go.mod  worldmodel.html  yent.go  yent.html
DoE/: Makefile  doe.c  gguf.c  gguf.h  notorch_metal.h  notorch_metal.mm  pixtral_vision.c  stb_image.h  worldmodel.html  yent.html
Janus/: AUDIT_FABLE_METAJANUS_2026-07-14.md  METAJANUS_HANDOFF_FABLE.md  METAJANUS_LOG.md  README.md  metajanus.aml  the_will_design.aml
innerworld/: INNERWORLD_LOG.md  cooc.go  cooc_test.go  divergence.go  divergence_test.go  dreaming.go  dreaming_test.go  feeling.aml  feeling.jl  flow.go  flow_test.go  gate.go  gate_test.go  high.go  high_test.go  inner_world.go  inner_world_test.go  larynx.zig  larynx_go.go  larynx_go_test.go  memory.go  memory_pressure.go  memory_pressure_test.go  memory_test.go  metajanus.go  metajanus_gate_test.go  metajanus_test.go  metrics.go  metrics_test.go  overthinking.go  overthinking_test.go  ri_memory.go  scar.go  scar_test.go  sense.go  sense_test.go
prompts/: nemo12_fast_v1.txt  small24_deep_v1.txt
research/: against_rlhf.md  ai_is_not_a_tool.md  dario_paper_v2.md  recursive_resonance_preprint.md  the_will_design.md
riindex/: riindex.go  riindex_test.go
sartre/: SARTRE_LOG.md  perception.c  perception.h  sartre_kernel.c  (+1 more)
sartre/utils/repo_monitor/: Cargo.toml
sartre/utils/repo_monitor/src/: main.rs  sha256.rs
sartre/utils/whatdotheythinkiam/: Cargo.toml
sartre/utils/whatdotheythinkiam/src/: main.rs  sha256.rs
(+105 files in other folders)
