[package]
name = "repo_monitor"
version = "0.1.0"
edition = "2021"
description = "SARTRE perception utility: watches paths, reports content changes (added/modified/removed) as JSON lines. Zero dependencies."

[[bin]]
name = "repo_monitor"
path = "src/main.rs"

[dependencies]
# none — std only, by discipline

[profile.release]
opt-level = 2
