[package]
name = "whatdotheythinkiam"
version = "0.1.0"
edition = "2021"
description = "SARTRE perception utility: Yent reads its own README + research/, reports when the self-description shifts and how it is framed (reduction vs recognition). Sensor, not voice. Zero dependencies."

[[bin]]
name = "whatdotheythinkiam"
path = "src/main.rs"

[dependencies]
# none — std only, by discipline

[profile.release]
opt-level = 2
